add subtract, multiply, divide forms and front end jquery for each

--- a/calculator.html
+++ b/calculator.html
@@ -21,8 +21,50 @@
         </div>
         <button type="submit" class="btn">Add!</button>
       </form>
-      <div id="output">
-        
+      <div id="addOutput">
+
+      </div>
+      <form id="sub">
+        <div class="form-group">
+          <label for="sub1">1st number:</label>
+          <input id="sub1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="sub2">2nd number:</label>
+          <input id="sub2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Subtract!</button>
+      </form>
+      <div id="subOutput">
+
+      </div>
+      <form id="multi">
+        <div class="form-group">
+          <label for="multi1">1st number:</label>
+          <input id="multi1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="multi2">2nd number:</label>
+          <input id="multi2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Multiply!</button>
+      </form>
+      <div id="multiOutput">
+
+      </div>
+      <form id="divide">
+        <div class="form-group">
+          <label for="divide1">1st number:</label>
+          <input id="divide1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="divide2">2nd number:</label>
+          <input id="divide2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Divide!</button>
+      </form>
+      <div id="divideOutput">
+
       </div>
     </div>
   </body>
