--- a/calculator.html
+++ b/calculator.html
@@ -10,61 +10,43 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
-      <form id="add">
+      <form id="calculator">
         <div class="form-group">
-          <label for="add1">1st number:</label>
-          <input id="add1" class="form-control" type="text">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="add2">2nd number:</label>
-          <input id="add2" class="form-control" type="text">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn">Add!</button>
+        <div class="radio-inline">
+          <label class="radio">
+            <input type="radio" name="operator" value="add" checked>
+            add
+          </label>
+        </div>
+        <div class="radio-inline">
+          <label class="radio">
+            <input type="radio" name="operator" value="subtract">
+            subtract
+          </label>
+        </div>
+        <div class="radio-inline">
+          <label class="radio">
+            <input type="radio" name="operator" value="multiply">
+            multiply
+          </label>
+        </div>
+        <div class="radio-inline">
+          <label class="radio">
+            <input type="radio" name="operator" value="divide">
+            divide
+          </label>
+        </div>
+        <button type="submit" class="btn">Go!</button>
       </form>
-      <div id="addOutput">
-
-      </div>
-      <form id="sub">
-        <div class="form-group">
-          <label for="sub1">1st number:</label>
-          <input id="sub1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="sub2">2nd number:</label>
-          <input id="sub2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn">Subtract!</button>
-      </form>
-      <div id="subOutput">
-
-      </div>
-      <form id="multi">
-        <div class="form-group">
-          <label for="multi1">1st number:</label>
-          <input id="multi1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="multi2">2nd number:</label>
-          <input id="multi2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn">Multiply!</button>
-      </form>
-      <div id="multiOutput">
-
-      </div>
-      <form id="divide">
-        <div class="form-group">
-          <label for="divide1">1st number:</label>
-          <input id="divide1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="divide2">2nd number:</label>
-          <input id="divide2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn">Divide!</button>
-      </form>
-      <div id="divideOutput">
-
+      <div class="well" id="outputwell">
+        <p id="output"></p>
       </div>
     </div>
   </body>
